small correction on part's title

--- a/index.html
+++ b/index.html
@@ -31,28 +31,30 @@
             </header>
             <div id="home-title">
                 <h1>Corentin Istace</h1>
-                <h2>A motivate junior Front-End web developer</h2>
+                <h2>A motivated junior Front-End web developer</h2>
             </div>
-            <button id="home-button" onclick="document.location='#contact'">Call me</button>
+            <a id="home-button" href="#about">Know more about me</a>
         </section>
 
         <section class="part" id="about">
             <div class="part-title">
-                <h3>About me ~</h3>
+                <h3>About me </h3>
+                 <hr style="width:25%;margin-left:0;color: grey;"> 
             </div>
             <div id="about-container">
-                <img src="./gulp/img/linkedin.webp" alt="photo de moi">
                 <div id="about-text">
                     <p>I have very good knowledge about HTML5, CSS3, SASS, Git and Github,</p>
                     <p>Good Knowledge about Javascript, PHP, Wordpress,</p>
                     <p>Basics Knowledge about React, Parcel, Gulp, Docker.</p>
                 </div>
+                <img src="./gulp/img/linkedin.webp" alt="photo de moi">
             </div>
         </section>
 
         <section class="part" id="projects">
             <div class="part-title">
-                <h3>Projects ~</h3>
+                <h3>Projects </h3>
+                 <hr style="width:25%;margin-left:0;color: grey;"> 
             </div>
             <div id="projects-container">
                 <article class="project project1">
@@ -172,7 +174,8 @@
         
         <section class="part" id="contact">
             <div class="part-title">
-                <h3>Contact ~</h3>
+                <h3>Contact</h3>
+                 <hr style="width:25%;margin-left:0;color:grey;"> 
             </div>
             <section id="contacts-container">
                 <div id="contacts-container-left">
@@ -188,8 +191,8 @@
                 <div id="contacts-container-right">
                 <h3>Do you want to know more about my Knoledge ?</h3>
                 <div id="contacts-container-right-button">
-                    <button><a href="./gulp/img/CV-Corentin Istace.pdf" target="_blank">Take a look</a></button>
-                    <button><a href="./gulp/img/CV-Corentin Istace.pdf" download="CV-Corentin_Istace.pdf" target="_blank">Keep it</a></button>
+                    <a href="./gulp/img/CV-Corentin Istace.pdf" target="_blank">Take a look</a>
+                    <a href="./gulp/img/CV-Corentin Istace.pdf" download="CV-Corentin_Istace.pdf" target="_blank">Keep it</a>
                 </div>
                 </div>
             </section>
