ading icon in home info, change order of project, adding target blank

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                 <h1>Corentin Istace</h1>
                 <h2>A motivated junior Front-End web developer</h2>
             </div>
-            <a id="home-button" href="#about">Know more about me</a>
+            <div id="home-moreInfo">
+                <a id="home-button" href="#about">Know more about me</a>
+                <i class="fas fa-chevron-down"></i>
+            </div>
         </section>
 
         <section class="part" id="about">
@@ -65,17 +68,36 @@
                     </div>
                     <P>Made with HTML - CSS </P>   
                     <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/dj-project" class="project-link-git" title="Go to the Github repo">
+                        <a href="https://github.com/corentinIstace/dj-project" class="project-link-git" target="blank" title="Go to the Github repo">
                             <i class="fas fa-folder"></i>
                             <i class="fas fa-folder-open"></i>
                         </a> 
-                        <a href="https://corentinistace.github.io/dj-project/" class="project-link-net" title="Watch in the browser">
+                        <a href="https://corentinistace.github.io/dj-project/" class="project-link-net" target="blank" title="Watch in the browser">
                             <i class="fas fa-sign-in-alt"></i>
                             <i class="fas fa-sign-out-alt"></i>
                         </a> 
                     </div>
                 </article>
                 <article class="project project2">
+                    <h3 class="project-title">Character manage</h3>
+                    <div class="items">
+                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
+                        <i class="fab fa-sass"></i>
+                        <img class="svg svg-js" src="./gulp/svg/javascript.svg" alt="svg du logo javascript  non-officiel">
+                    </div>
+                    <P>Made with HTML - CSS - Javascript</P>   
+                    <div class="project-link-container">
+                        <a href="https://github.com/corentinIstace/character-manage.js" class="project-link-git" target="blank" title="Go to the Github repo">
+                            <i class="fas fa-folder"></i>
+                            <i class="fas fa-folder-open"></i>
+                        </a> 
+                        <a href="https://corentinistace.github.io/character-manage.js/" class="project-link-net" target="blank" title="Watch in the browser">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <i class="fas fa-sign-out-alt"></i>
+                        </a> 
+                    </div>
+                </article>
+                <article class="project project3">
                     <h3 class="project-title">This portfolio</h3>                    
                     <div class="items">
                         <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
@@ -85,29 +107,11 @@
                     </div>
                     <P>Made with HTML - Sass - Javascript - Gulp</P>   
                     <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/portefolio" class="project-link-git" title="Go to the Github repo">
+                        <a href="https://github.com/corentinIstace/portefolio" class="project-link-git" target="blank" title="Go to the Github repo">
                             <i class="fas fa-folder"></i>
                             <i class="fas fa-folder-open"></i>
                         </a> 
-                        <a href="https://corentinistace.github.io/portefolio/" class="project-link-net" title="Watch in the browser">
-                            <i class="fas fa-sign-in-alt"></i>
-                            <i class="fas fa-sign-out-alt"></i>
-                        </a> 
-                    </div>
-                </article>
-                <article class="project project3">
-                    <h3 class="project-title">P.I.L project</h3>                    
-                    <div class="items">
-                        <i class="fab fa-php"></i>
-                        <i class="fab fa-wordpress"></i>
-                    </div>
-                    <P>Made with PHP - Wordpress</P>  
-                    <div class="project-link-container">
-                        <a href="" class="project-link-git" title="Go to the Github repo">
-                            <i class="fas fa-folder"></i>
-                            <i class="fas fa-folder-open"></i>
-                        </a> 
-                        <a href="" class="project-link-net" title="Watch in the browser">
+                        <a href="https://corentinistace.github.io/portefolio/" class="project-link-net" target="blank" title="Watch in the browser">
                             <i class="fas fa-sign-in-alt"></i>
                             <i class="fas fa-sign-out-alt"></i>
                         </a> 
@@ -120,52 +124,27 @@
                     </div>
                     <P>Made with React</P>   
                     <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/weather-app" class="project-link-git" title="Go to the Github repo">
+                        <a href="https://github.com/corentinIstace/weather-app" class="project-link-git" target="blank" title="Go to the Github repo">
                             <i class="fas fa-folder"></i>
                             <i class="fas fa-folder-open"></i>
                         </a> 
-                        <a href="https://61a10181a4ef52000799db8c--ci-my-weather-app.netlify.app/" class="project-link-net" title="Watch in the browser">
+                        <a href="https://61a10181a4ef52000799db8c--ci-my-weather-app.netlify.app/" class="project-link-net" target="blank" title="Watch in the browser">
                             <i class="fas fa-sign-in-alt"></i>
                             <i class="fas fa-sign-out-alt"></i>
                         </a> 
                     </div>
                 </article>
                 <article class="project project5">
-                    <h3 class="project-title">Random number game</h3>
+                    <h3 class="project-title">P.I.L project</h3>                    
                     <div class="items">
-                        <img class="svg" src="./gulp/svg/html5-01.svg" alt="svg du logo HTML5 non-officiel">
-                        <img class="svg" src="./gulp/svg/css3-01.svg" alt="svg du logo css non-officiel">
-                        <img class="svg svg-js" src="./gulp/svg/javascript.svg" alt="svg du logo javascript  non-officiel">
+                        <i class="fab fa-php"></i>
+                        <i class="fab fa-wordpress"></i>
                     </div>
-                    <P>Made with HTML - CSS - Javascript</P>   
+                    <P>Made with PHP - Wordpress</P>  
                     <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/jeux" class="project-link-git" title="Go to the Github repo">
+                        <a href="https://github.com/corentinIstace/PIL-project" class="project-link-git" target="blank" title="Go to the Github repo">
                             <i class="fas fa-folder"></i>
                             <i class="fas fa-folder-open"></i>
-                        </a> 
-                        <a href="https://upbeat-spence-4b1f46.netlify.app/" class="project-link-net" title="Watch in the browser">
-                            <i class="fas fa-sign-in-alt"></i>
-                            <i class="fas fa-sign-out-alt"></i>
-                        </a> 
-                    </div>
-                </article>
-                <article class="project project6">
-                    <h3 class="project-title">Tree Lidge Game</h3>
-                    <div class="items">
-                        <img class="svg-mongo" src="./img/MongoDB.svg" alt="svg du logo mongoDB non-officiel">
-                        <img class="svg-express" src="./img/expressjslogo.svg" alt="svg du logo express non-officiel">
-                        <i class="fab fa-react"></i>
-                        <i class="fab fa-node-js"></i>
-                    </div>
-                    <P>Mern project</P>   
-                    <div class="project-link-container">
-                        <a href="https://github.com/corentinIstace/tree_lidge-game" class="project-link-git" title="Go to the Github repo">
-                            <i class="fas fa-folder"></i>
-                            <i class="fas fa-folder-open"></i>
-                        </a> 
-                        <a href="" class="project-link-net" title="Watch in the browser">
-                            <i class="fas fa-sign-in-alt"></i>
-                            <i class="fas fa-sign-out-alt"></i>
                         </a> 
                     </div>
                 </article>
