--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./gulp/style.css?cb=1637743665999">
     <title>Corentin Istace - Portfolio</title>
 </head>
@@ -19,8 +20,8 @@
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
+                    <a href="javascript:void(0)" id="hambIcon"><i class="fa fa-bars"></i></a>
                 </nav>
-                <!-- <a href="javascript:void(0)" id="icon" onclick="navbar()"><i class="fa fa-bars"></i></a> -->
                 <div id="link">
                     <hr class="vertical">
                     <a href="https://www.facebook.com/corentin.istace.7/" target="blank"><i class="social fab fa-facebook-square"></i></a>
@@ -34,8 +35,11 @@
                 <h2>A motivated junior Front-End web developer</h2>
             </div>
             <div id="home-moreInfo">
-                <a id="home-button" href="#about">Know more about me</a>
-                <i class="fas fa-chevron-down"></i>
+                <a id="home-button" href="#about">Know more about me <br>
+                <i class="fas fa-chevron-down"></i></a>
+            </div>
+            <div id="home-link">
+                <a href="#home"><i class="fas fa-arrow-up"></i></a> 
             </div>
         </section>
 
@@ -46,6 +50,11 @@
             </div>
             <div id="about-container">
                 <div id="about-text">
+                    <p>My name is corentin, I am 24 years old and I am from Bastogne.
+                        After 2 years in the security sector I decided to retrain in the development field.<br>
+                        My professional experience allowed me to acquire rigor and autonomy as well as a good team spirit.
+                        I am looking for a family business where I could highlight my human qualities and improve my knowledge
+                        by participating in the realization of projects.</p>
                     <p>I have very good knowledge about HTML5, CSS3, SASS, Git and Github,</p>
                     <p>Good Knowledge about Javascript, PHP, Wordpress,</p>
                     <p>Basics Knowledge about React, Parcel, Gulp, Docker.</p>
@@ -170,8 +179,8 @@
                 <div id="contacts-container-right">
                 <h3>Do you want to know more about my Knoledge ?</h3>
                 <div id="contacts-container-right-button">
-                    <a href="./gulp/img/CV-Corentin Istace.pdf" target="_blank">Take a look</a>
-                    <a href="./gulp/img/CV-Corentin Istace.pdf" download="CV-Corentin_Istace.pdf" target="_blank">Keep it</a>
+                    <a href="./gulp/img/CV-Corentin Istace.pdf" target="_blank" title="watch my CV">Take a look</a>
+                    <a href="./gulp/img/CV-Corentin Istace.pdf" target="_blank" title="download my CV" download="CV-Corentin_Istace.pdf" >Keep it</a>
                 </div>
                 </div>
             </section>
