--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                 <div id="contacts-container-right">
                 <h3>Do you want to know more about my Knoledge ?</h3>
                 <div id="contacts-container-right-button">
-                    <a href="./gulp/img/CV-Corentin Istace.pdf" target="_blank" title="watch my CV">Take a look</a>
-                    <a href="./gulp/img/CV-Corentin Istace.pdf" target="_blank" title="download my CV" download="CV-Corentin_Istace.pdf" >Keep it</a>
+                    <a href="./gulp/img/Corentin Istace CV.pdf" target="_blank" title="watch my CV">Take a look</a>
+                    <a href="./gulp/img/Corentin Istace CV.pdf" target="_blank" title="download my CV" download="Corentin Istace CV.pdf" >Keep it</a>
                 </div>
                 </div>
             </section>
