adding "w" to knowledge

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </article>
                 </div>
                 <div id="contacts-container-right">
-                <h3>Do you want to know more about my Knoledge ?</h3>
+                <h3>Do you want to know more about my Knowledge ?</h3>
                 <div id="contacts-container-right-button">
                     <a href="./gulp/img/Corentin Istace CV.pdf" target="_blank" title="watch my CV">Take a look</a>
                     <a href="./gulp/img/Corentin Istace CV.pdf" target="_blank" title="download my CV" download="Corentin Istace CV.pdf" >Keep it</a>
