change weather app

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <i class="fas fa-folder"></i>
                             <i class="fas fa-folder-open"></i>
                         </a> 
-                        <a href="https://61a10181a4ef52000799db8c--ci-my-weather-app.netlify.app/" class="project-link-net" target="blank" title="Watch in the browser">
+                        <a href="https://ci-my-weather-app.netlify.app" class="project-link-net" target="blank" title="Watch in the browser">
                             <i class="fas fa-sign-in-alt"></i>
                             <i class="fas fa-sign-out-alt"></i>
                         </a> 
